--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExtCore" version="0.8.46" targetFramework="net45" />
+  <package id="FSPowerPack.Community" version="3.0.0.0" targetFramework="net45" />
+  <package id="FSPowerPack.Core.Community" version="2.0.0.0" targetFramework="net45" />
+  <package id="FSPowerPack.Linq.Community" version="2.0.0.0" targetFramework="net45" />
+  <package id="FSPowerPack.Metadata.Community" version="2.0.0.0" targetFramework="net45" />
+  <package id="FSPowerPack.Parallel.Seq.Community" version="2.0.0.0" targetFramework="net45" />
   <package id="GraphSharp" version="1.1.0.0" targetFramework="net45" />
   <package id="QuickGraph" version="3.6.61119.7" targetFramework="net45" />
   <package id="WPFExtensions" version="1.0.0" targetFramework="net45" />
